# euribor

./: .gitignore  LICENSE  README.md  euribor.py  pyproject.toml  pytest.ini
.github/workflows/: run-tests.yml  update-euribor.yml
api/: 2024-01-08  2024-02-07  2024-02-20  2024-03-15  2024-04-18  2024-07-04  2024-08-07  2024-08-09  2024-08-12  2024-10-04  2025-04-24
api/1999/: index.json
api/2000/: index.json
api/2001/: index.json
api/2002/: index.json
api/2003/: index.json
api/2004/: index.json
api/2005/: index.json
api/2006/: index.json
api/2007/: index.json
api/2008/: index.json
api/2009/: index.json
api/2010/: index.json
api/2011/: index.json
api/2012/: index.json
api/2013/: index.json
api/2014/: index.json
api/2015/: index.json
api/2016/: index.json
api/2017/: index.json
api/2018/: index.json
api/2019/: index.json
api/2020/: index.json
api/2021/: index.json
api/2022/: index.json
api/2023/: index.json
api/2024/: index.json
api/2025/: index.json
api/2026/: index.json
api/daily/: 2024-01-02  2024-01-09  2024-01-12  2024-01-16  2024-01-26  2024-01-29  2024-01-31  2024-02-14  2024-02-15  2024-02-22  2024-03-01  2024-05-07  2024-05-20  2024-05-29  2024-06-12  2024-06-13  2024-06-20  2024-07-10  2024-07-26  2024-08-26  2024-09-24  2024-10-01  2024-10-22  2024-11-11  2024-12-18  2024-12-19  2024-12-24
api/monthly/: 2012-01  2012-02  2016-09  2016-11  2017-02  2017-04  2017-07  2017-08  2018-01  2018-06  2018-12  2019-01  2019-07  2019-09  (+28 more)
src/: __init__.py  date_utils.py  euribor.py
tests/: test_euribor.py
(+1259 files in other folders)
