[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "euribor"
version = "0.1.0"
description = "API para acceder a las tasas EURIBOR"
readme = "README.md"
authors = [
    {name = "Jorge Maroto", email = "your.email@example.com"},
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term --cov-report=html"

[tool.hatch.build.targets.wheel]
packages = ["src"] 
